<resources>
    <!-- general -->
    <string name="app_name">Boxxit</string>

    <!-- facebook -->
    <string name="facebook_app_id">181375615709434</string>
    <string name="fb_login_protocol_scheme">fb181375615709434</string>

    <!-- activities -->

    <!-- login -->
    <string name="activity_login_btn_text">Login with Facebook</string>

    <!-- main -->
    <string name="activity_main_name_placeholder">Name</string>
    <string name="activity_main_birthday_placeholder">Birthday</string>
    <string name="activity_main_find_for_you">Find for you</string>

    <string name="activity_main_invite_btn_title">Invite friends</string>
    <string name="activity_main_invite_friends_message">It\'s better with friends.</string>
    <string name="activity_main_invite_nofriends_message_1">Connect\nwith your friends</string>
    <string name="activity_main_invite_nofriends_message_2">and discover\nnew ideas for gifts</string>

    <string name="activity_main_error">Error trying to get friends birthdays</string>

    <!-- explore -->
    <string name="activity_explore_name_placeholder">Name</string>
    <string name="activity_explore_birthday_placeholder">Birthday</string>
    <string name="activity_explore_get_amazon">Get on Amazon</string>
    <string name="activity_explore_product_price_placeholder">£23.5</string>
    <string name="activity_explore_product_name_placeholder">This is\nproduct</string>
    <string name="activity_explore_product_reason_sure_you">Recommended because you like %1$s</string>
    <string name="activity_explore_product_reason_sure_friend">Recommended because your friend likes %1$s</string>
    <string name="activity_explore_product_reason_maybe_you">Recommended because you might like %1$s</string>
    <string name="activity_explore_product_reason_maybe_friend">Recommended because your friend might like %1$s</string>
    <string name="activity_explore_error">Error trying to get gifts!</string>

    <!-- favourites -->
    <string name="activity_favourites_product_name_placeholder">This is\nproduct</string>
    <string name="activity_favourites_product_price_placeholder">£23.5</string>
    <string name="activity_favourites_no_products">No currenlty saved products.</string>
    <string name="activity_favourites_error">Error trying to get favourite products</string>

    <!-- alerts & errors -->
    <string name="alert_network_error_title">Oops!</string>
    <string name="alert_network_error_message">Seems there was an error trying to get your data.</string>
    <string name="alert_auth_error_title">Oops!</string>
    <string name="alert_auth_error_message">We couldn\'t log you in!</string>
    <string name="alert_ok">OK!</string>
    <string name="alert_try_again">Try Again</string>
    <string name="alert_cancel">Cancel</string>
    <string name="error_button_try_again">Retry</string>

    <!-- tutorial -->
    <string name="tutorial_1_text">Hey %1$s!\nWelcome to Boxxit, the app that helps you find interesting gift ideas for your friends.</string>
    <string name="tutorial_1_button">Tap to start</string>

    <string name="tutorial_2_text">This is your profile!\nBased on your likes and interests Boxxit has already prepared a list of gift ideas for you.</string>
    <string name="tutorial_2_button">Tap to continue</string>

    <string name="tutorial_3_1_text">And these are your friends!\nYou can tap on any of them to see what gift ideas Boxxit suggests.</string>
    <string name="tutorial_3_1_button">Tap on any friend</string>

    <string name="tutorial_3_2_text">Oh! None of your friends are on Boxxit.\nInvite them to the app or explore gift ideas for you.  </string>
    <string name="tutorial_3_2_button">Gift ideas for you</string>

    <string name="tutorial_4_text">This is the heart of Boxxit.\nYou can scroll down to see more gifts ideas.\n\nWe hope you like them and find one that\'s just right!</string>
    <string name="tutorial_4_button">Tap to continue</string>

    <string name="tutorial_5_text">That\'s it, you\'re all setup to start using Boxxit.\n\nWe hope you enjoy it and find the right gifts for your friends!</string>
    <string name="tutorial_5_button">Tap to finish</string>

    <!-- birthday stuff -->
    <string name="birthday_today">Birthday today</string>
    <string name="birthday_no_data">Birthday not available</string>

</resources>
