<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <com.boxxit.boxxit.app.views.RoundRectCornerImageView
        android:layout_margin="16dp"
        android:scaleType="centerCrop"
        android:src="@drawable/invitebg"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/InviteText1"
            android:text="@string/activity_main_invite_nofriends_message_1"
            android:lines="2"
            android:textAlignment="center"
            android:textColor="@color/text_yellow"
            android:textSize="26sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/InviteText2"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/InviteText1"
            android:lines="2"
            android:text="@string/activity_main_invite_nofriends_message_2"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/text_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/InviteBtn"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/InviteText2"
            android:textColor="@color/primary"
            android:textStyle="bold"
            android:textSize="10sp"
            android:gravity="center"
            android:background="@drawable/small_button_white"
            android:text="@string/activity_main_invite_btn_title"
            android:layout_width="80dp"
            android:layout_height="26dp"/>

    </RelativeLayout>

</RelativeLayout>
