<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.boxxit.boxxit.app.activities.main.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/logo"
            android:layout_margin="20dp"
            android:layout_width="40dp"
            android:layout_height="40dp"/>

        <ImageView
            android:id="@+id/ProfilePicture"
            android:src="@drawable/ic_user_default"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center"
            android:layout_width="80dp"
            android:layout_height="80dp"/>
        <TextView
            android:id="@+id/ProfileName"
            android:layout_below="@+id/ProfilePicture"
            android:text="@string/activity_main_name_placeholder"
            android:textColor="@color/text_dark"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="22dp" />
        <TextView
            android:id="@+id/ProfileBirthday"
            android:layout_below="@+id/ProfileName"
            android:text="@string/activity_main_birthday_placeholder"
            android:textColor="@color/text_dark"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginBottom="16dp"/>
        <Button
            android:id="@+id/FindForYou"
            android:textAllCaps="false"
            android:layout_below="@id/ProfileBirthday"
            android:layout_marginBottom="16dp"
            android:layout_centerHorizontal="true"
            style="@style/SmallButtonStyle"
            android:text="@string/activity_main_find_for_you"
            android:layout_width="140dp"
            android:layout_height="30dp" />

        <View
            android:layout_below="@+id/FindForYou"
            android:background="@color/separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
    </RelativeLayout>

</LinearLayout>
