<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white">

    <ImageView
        android:id="@+id/ProductImage"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_width="200dp"
        android:layout_height="200dp"/>
    <TextView
        android:id="@+id/ProductName"
        android:layout_below="@id/ProductImage"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/text_blue"
        android:textStyle="bold"
        android:text="@string/activity_explore_product_name_placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/ProductReason"
        android:textAlignment="center"
        android:text="@string/activity_explore_product_reason_you"
        android:layout_below="@+id/ProductName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>
    <RelativeLayout
        android:id="@+id/AmazonBtnBolder"
        android:gravity="center"
        style="@style/BigButtonDarkStyle"
        android:layout_margin="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/ProductReason"
        android:layout_width="180dp"
        android:layout_height="30dp">

        <TextView
            android:id="@+id/ProductPrice"
            android:text="@string/activity_explore_product_price_placeholder"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/text_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/GetOnAmazon"
            android:layout_toEndOf="@+id/ProductPrice"
            android:textColor="@color/text_blue"
            android:layout_marginStart="10dp"
            android:text="@string/activity_explore_get_amazon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <ImageButton
        android:id="@+id/LikeButton"
        android:scaleType="centerInside"
        android:src="@drawable/nolike"
        android:layout_toStartOf="@+id/AmazonBtnBolder"
        android:layout_alignBottom="@id/AmazonBtnBolder"
        android:background="@color/transparent"
        android:layout_width="30dp"
        android:layout_height="30dp"/>
    <View
        android:id="@+id/Separator"
        android:layout_below="@id/AmazonBtnBolder"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/separator"/>

</RelativeLayout>
